[package]
name = "ackley_mc"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.4", features = ["html_reports"] } # benchmarking
clap = { version = "4.2.7", features = ["derive"] } # cmd-line parsing
itertools = "0.8"
itertools-num = "0.1"
ndarray = "0.15.6"
plotly = { version = "0.8.3", features = ["kaleido"] } # plotting
rand = "*"
rand_chacha = "0.3.1"
float-cmp = "0.9.0"

[[bench]]
name = "ackley_benchmark"
harness = false
